--- a/MyOnlineConfig.ini
+++ b/MyOnlineConfig.ini
@@ -50,11 +50,12 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🚀 节点选择`select`[]🇭🇰3️⃣  香港节点v3`[]🇭🇰 香港节点`[]🐼 猫熊低倍率节点`[]🔯 故障转移`[]♻️ 自动选择`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]其他节点`[]DIRECT
+custom_proxy_group=🚀 节点选择`select`[]🇭🇰3️⃣ 香港节点v3`[]UT3️⃣ 香港节点v3`[]🇭🇰 香港节点`[]🐼 猫熊低倍率节点`[]🔯 故障转移`[]♻️ 自动选择`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]其他节点`[]DIRECT
 custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🔯 故障转移`fallback`[]🇭🇰3️⃣  香港节点v3`[]🇭🇰 香港节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]其他节点`[]DIRECT`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇭🇰3️⃣  香港节点v3`fallback`(IPLC-V3\d{2}-香港)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🔯 故障转移`fallback`[]🇭🇰3️⃣ 香港节点v3`[]UT3️⃣ 香港节点v3`[]🇭🇰 香港节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]其他节点`[]DIRECT`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰3️⃣ 香港节点v3`fallback`(IPLC-V3\d{2}-香港)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=UT3️⃣ 香港节点v3`url-test`(IPLC-V3\d{2}-香港)`http://www.gstatic.com/generate_204`300,,20
 custom_proxy_group=🇭🇰 香港节点`url-test`(港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=👔 LinkedIn`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]♻️ 自动选择`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=💬 Ai`select`[]🚀 节点选择`[]🐼 ChatGPT解锁节点`[]🇺🇲 美国节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
