--- a/MyOnlineConfig.ini
+++ b/MyOnlineConfig.ini
@@ -11,6 +11,7 @@
 ;加入自用的github黑白名单
 
 ;设置规则标志位
+;ruleset=🛑 广告拦截,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BlockHttpDNS/BlockHttpDNS.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/LennoC/ACL4SSR/mine/gh_direct.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/LennoC/ACL4SSR/mine/gh_proxy.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Lan/Lan.list 
