--- a/MyOnlineConfig.ini
+++ b/MyOnlineConfig.ini
@@ -83,7 +83,7 @@ custom_proxy_group=🇰🇷 韩国节点`url-test`(KR|Korea|KOR|首尔|韩|韓)`
 custom_proxy_group=其他节点`select`(^(?!.*(香港|台湾|新加坡|韩国|美国|日本)).*)
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择
 custom_proxy_group=🛑 其他拦截`select`[]REJECT-DROP`[]REJECT`[]DIRECT`[]PASS
-custom_proxy_group=🛑 广告拦截`select`[]REJECT-DROP`[]REJECT`[]DIRECT`[]PASS
+;custom_proxy_group=🛑 广告拦截`select`[]REJECT-DROP`[]REJECT`[]DIRECT`[]PASS
 ;设置分组标志位
 
 enable_rule_generator=true
