--- a/MyOnlineConfig.ini
+++ b/MyOnlineConfig.ini
@@ -3,7 +3,9 @@
 ;基于acl4SSR规则，自用修改的sub订阅模板 by Lenno
 
 ;去广告：默认注释; HttpDNS: 默认注释
-;GEO兼容性:兼容全版本GEOSITE/IP，建议使用Loyalsoldier/v2ray-rules-dat的GEO文件
+;GEO兼容性:建议使用DustinWin/ruleset_geodata的GEO文件。与Loyalsoldier和Metacube可能有不兼容字段
+;(本配置没使用)已知DustinWin独有的字段： networktest, AI, game-cn, tiktok, fakeip-filter(singbox专用)
+;(！弃用！)[兼容全版本GEOSITE/IP，建议使用Loyalsoldier/v2ray-rules-dat的GEO文件]
 ;acl4SSR自带增强：中国IP段，GFWlist
 ;特性：自动测速UrlTest，故障转移Fallback
 ;支持分流：微软/Onedrive，苹果，谷歌/FCM
@@ -11,20 +13,25 @@
 ;加入自用的github黑白名单
 
 ;设置规则标志位
-;ruleset=🛑 其他拦截,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BlockHttpDNS/BlockHttpDNS.list
-;ruleset=🎯 全球直连,https://raw.githubusercontent.com/LennoC/ACL4SSR/mine/UnBan.list
-;ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Direct/Direct.list
-;blackmatrix7的direct是指不应该被去广告分流规则屏蔽的域名、IP等，请将此分流规则置于去广告规则之前。Advertising规则已排除,不需要此列表。
+ruleset=🛑 其他拦截,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BlockHttpDNS/BlockHttpDNS.list
+ruleset=🛑 广告拦截,clash-domain:https://raw.githubusercontent.com/TG-Twilight/AWAvenue-Ads-Rule/main/Filters/AWAvenue-Ads-Rule-Clash.yaml
+;ruleset=🎯 全球直连,[]GEOSITE,ads
 ;ruleset=🛑 广告拦截,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Clash/Advertising/Advertising.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Lan/Lan.list 
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/DustinWin/ruleset_geodata/clash-ruleset/applications.list
+;rule-set,applications,🖥️ 直连软件 源采用 blackmatrix7/ios_rule_script/Download 和 Loyalsoldier/clash-rules/applications.txt 组合,注释掉重复的Download
+;ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Download/Download.list
+ruleset=🎯 全球直连,[]GEOSITE,private
+;ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Lan/Lan.list
 ;预埋NTP服务器规则，未清楚为什么要连多个地区的NTP
 ;ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/NTPService/NTPService.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/LennoC/ACL4SSR/mine/gh_direct.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/LennoC/ACL4SSR/mine/gh_proxy.list
-ruleset=💬 Ai,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
-ruleset=💬 Ai,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Copilot/Copilot.list
-ruleset=💬 Ai,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Claude/Claude.list
-ruleset=💬 Ai,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Gemini/Gemini.list
+ruleset=💬 Ai,https://raw.githubusercontent.com/DustinWin/ruleset_geodata/clash-ruleset/ai.list
+;DstinWin的AI列表包含了blackmatrix7的OpenAI，COPILOT,CLAUDE,GEMINI。
+;ruleset=💬 Ai,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
+;ruleset=💬 Ai,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Copilot/Copilot.list
+;ruleset=💬 Ai,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Claude/Claude.list
+;ruleset=💬 Ai,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Gemini/Gemini.list
 ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GoogleFCM/GoogleFCM.list
 ruleset=🇬 谷歌,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
 ruleset=👔 LinkedIn,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/LinkedIn/LinkedIn.list
@@ -36,16 +43,20 @@ ruleset=🐼 猫熊EMBY,https://raw.githubusercontent.com/blackmatrix7/ios_rule_
 ruleset=🍎 苹果服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple.list
 ruleset=📲 电报消息,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Game/Game.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/DustinWin/ruleset_geodata/clash-ruleset/games-cn.list
+;ruleset=🎯 全球直连,[]GEOSITE,games-cn
+;采用ruleset来使用DustinWin的games-cn规则，作Game组PASS后的兜底。
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMedia/ChinaMedia.list
 ruleset=🌍 国外媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GlobalMedia/GlobalMedia.list
 ;Global list包含proxy，包含大量国外网站和app。
 ;ruleset=🌍 国外网站,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Global/Global.list
 ;有ProxyLite列表，去除死链和apple google等。
+ruleset=🚀 节点选择,[]GEOSITE,PROXY
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Proxy/Proxy.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Cloud/CloudCN/CloudCN.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Download/Download.list
 ruleset=🎯 全球直连,[]GEOSITE,CN
+ruleset=🎯 全球直连,[]GEOIP,private,no-resolve
 ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
