--- a/MyOnlineConfig.ini
+++ b/MyOnlineConfig.ini
@@ -6,15 +6,15 @@
 ;GEO兼容性:建议使用DustinWin/ruleset_geodata的GEO文件。与Loyalsoldier和Metacube可能有不兼容字段
 ;(本配置没使用)已知DustinWin独有的字段： networktest, AI, game-cn, tiktok, fakeip-filter(singbox专用)
 ;(！弃用！)[兼容全版本GEOSITE/IP，建议使用Loyalsoldier/v2ray-rules-dat的GEO文件]
-;acl4SSR自带增强：中国IP段，GFWlist
+;国内外域名列表规则分流
 ;特性：自动测速UrlTest，故障转移Fallback
 ;支持分流：微软/Onedrive，苹果，谷歌/FCM
 ;单独分流：领英，ZOHO，猫熊Emby，低倍率节点
 ;加入自用的github黑白名单
 
 ;设置规则标志位
-ruleset=🛑 其他拦截,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BlockHttpDNS/BlockHttpDNS.list
-ruleset=🛑 广告拦截,clash-domain:https://raw.githubusercontent.com/TG-Twilight/AWAvenue-Ads-Rule/main/Filters/AWAvenue-Ads-Rule-Clash.yaml
+;ruleset=🛑 其他拦截,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BlockHttpDNS/BlockHttpDNS.list
+;ruleset=🛑 广告拦截,clash-domain:https://raw.githubusercontent.com/TG-Twilight/AWAvenue-Ads-Rule/main/Filters/AWAvenue-Ads-Rule-Clash.yaml
 ;ruleset=🎯 全球直连,[]GEOSITE,ads
 ;ruleset=🛑 广告拦截,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Clash/Advertising/Advertising.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/DustinWin/ruleset_geodata/clash-ruleset/applications.list
@@ -45,14 +45,16 @@ ruleset=📲 电报消息,https://raw.githubusercontent.com/blackmatrix7/ios_rul
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Game/Game.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/DustinWin/ruleset_geodata/clash-ruleset/games-cn.list
 ;ruleset=🎯 全球直连,[]GEOSITE,games-cn
-;采用ruleset来使用DustinWin的games-cn规则，作Game组PASS后的兜底。
+;采用ruleset来使用DustinWin的games-cn规则，作Game组PASS后的兜底。避免GEO版本问题，不启用GEOSITE GAMES-CN。
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMedia/ChinaMedia.list
 ruleset=🌍 国外媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GlobalMedia/GlobalMedia.list
-;Global list包含proxy，包含大量国外网站和app。
-;ruleset=🌍 国外网站,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Global/Global.list
-;有ProxyLite列表，去除死链和apple google等。
 ruleset=🚀 节点选择,[]GEOSITE,PROXY
-ruleset=🚀 节点选择,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Proxy/Proxy.list
+;DustWin的GEOSITE PROXY包含了Blackmatraix7的Global(内含PROXY)，担心GEO版本则建议多启用Proxy列表。
+;Global list包含proxy，包含大量国外网站和app。Global,Proxy,ProxyLite根据需要选择一个即可。
+;ProxyLite列表，相比Proxy去除死链和apple google等。
+ruleset=🚀 节点选择,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ProxyLite/ProxyLite.list
+;ruleset=🚀 节点选择,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Proxy/Proxy.list
+;ruleset=🌍 国外网站,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Global/Global.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Cloud/CloudCN/CloudCN.list
 ruleset=🎯 全球直连,[]GEOSITE,CN
