--- a/MyOnlineConfig.ini
+++ b/MyOnlineConfig.ini
@@ -48,7 +48,7 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/DustinWin/ruleset_ge
 ;采用ruleset来使用DustinWin的games-cn规则，作Game组PASS后的兜底。避免GEO版本问题，不启用GEOSITE GAMES-CN。
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMedia/ChinaMedia.list
 ruleset=🌍 国外媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GlobalMedia/GlobalMedia.list
-ruleset=🚀 节点选择,[]GEOSITE,PROXY
+;ruleset=🚀 节点选择,[]GEOSITE,PROXY
 ;DustWin的GEOSITE PROXY包含了Blackmatraix7的Global(内含PROXY)，担心GEO版本则建议多启用Proxy列表。
 ;Global list包含proxy，包含大量国外网站和app。Global,Proxy,ProxyLite根据需要选择一个即可。
 ;ProxyLite列表，相比Proxy去除死链和apple google等。
