--- a/MyOnlineConfig.ini
+++ b/MyOnlineConfig.ini
@@ -26,12 +26,12 @@ ruleset=🎯 全球直连,[]GEOSITE,private
 ;ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/NTPService/NTPService.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/LennoC/ACL4SSR/mine/gh_direct.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/LennoC/ACL4SSR/mine/gh_proxy.list
-ruleset=💬 Ai,https://raw.githubusercontent.com/DustinWin/ruleset_geodata/clash-ruleset/ai.list
+ruleset=💬 Ai,clash-domain:https://raw.githubusercontent.com/DustinWin/ruleset_geodata/clash-ruleset/ai.list
 ;DstinWin的AI列表包含了blackmatrix7的OpenAI，COPILOT,CLAUDE,GEMINI。
-;ruleset=💬 Ai,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
-;ruleset=💬 Ai,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Copilot/Copilot.list
-;ruleset=💬 Ai,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Claude/Claude.list
-;ruleset=💬 Ai,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Gemini/Gemini.list
+ruleset=💬 Ai,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
+ruleset=💬 Ai,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Copilot/Copilot.list
+ruleset=💬 Ai,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Claude/Claude.list
+ruleset=💬 Ai,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Gemini/Gemini.list
 ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GoogleFCM/GoogleFCM.list
 ruleset=🇬 谷歌,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
 ruleset=👔 LinkedIn,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/LinkedIn/LinkedIn.list
@@ -41,17 +41,19 @@ ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/blackmatrix7/ios_r
 ruleset=🐼 猫熊EMBY,https://raw.githubusercontent.com/LennoC/ACL4SSR/mine/MxEmby.list
 ruleset=🐼 猫熊EMBY,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Emby/Emby.list
 ruleset=🍎 苹果服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple.list
+ruleset=📲 电报消息,[]GEOIP,Telegram,no-resolve
 ruleset=📲 电报消息,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Game/Game.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/DustinWin/ruleset_geodata/clash-ruleset/games-cn.list
+ruleset=🎯 全球直连,clash-domain:https://raw.githubusercontent.com/DustinWin/ruleset_geodata/clash-ruleset/games-cn.list
 ;ruleset=🎯 全球直连,[]GEOSITE,games-cn
 ;采用ruleset来使用DustinWin的games-cn规则，作Game组PASS后的兜底。避免GEO版本问题，不启用GEOSITE GAMES-CN。
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMedia/ChinaMedia.list
 ruleset=🌍 国外媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GlobalMedia/GlobalMedia.list
+;ruleset=🌍 国外网站,[]GEOSITE,PROXY
 ;ruleset=🚀 节点选择,[]GEOSITE,PROXY
 ;DustWin的GEOSITE PROXY包含了Blackmatraix7的Global(内含PROXY)，担心GEO版本则建议多启用Proxy列表。
 ;Global list包含proxy，包含大量国外网站和app。Global,Proxy,ProxyLite根据需要选择一个即可。
-;ProxyLite列表，相比Proxy去除死链和apple google等。
+;ProxyLite列表，对比Proxy，ProxyLite移除无法访问的域名，排除广告、苹果、微软和谷歌的规则.
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ProxyLite/ProxyLite.list
 ;ruleset=🚀 节点选择,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Proxy/Proxy.list
 ;ruleset=🌍 国外网站,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Global/Global.list
