--- a/MyOnlineConfig.ini
+++ b/MyOnlineConfig.ini
@@ -26,7 +26,7 @@ ruleset=🎯 全球直连,[]GEOSITE,private
 ;ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/NTPService/NTPService.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/LennoC/ACL4SSR/mine/gh_direct.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/LennoC/ACL4SSR/mine/gh_proxy.list
-ruleset=💬 Ai,clash-domain:https://raw.githubusercontent.com/DustinWin/ruleset_geodata/clash-ruleset/ai.list
+ruleset=💬 Ai,clash-domain:https://raw.githubusercontent.com/DustinWin/ruleset_geodata/clash-ruleset/ai.yaml
 ;DstinWin的AI列表包含了blackmatrix7的OpenAI，COPILOT,CLAUDE,GEMINI。
 ruleset=💬 Ai,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
 ruleset=💬 Ai,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Copilot/Copilot.list
@@ -44,7 +44,7 @@ ruleset=🍎 苹果服务,https://raw.githubusercontent.com/blackmatrix7/ios_rul
 ruleset=📲 电报消息,[]GEOIP,Telegram,no-resolve
 ruleset=📲 电报消息,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Game/Game.list
-ruleset=🎯 全球直连,clash-domain:https://raw.githubusercontent.com/DustinWin/ruleset_geodata/clash-ruleset/games-cn.list
+ruleset=🎯 全球直连,clash-domain:https://raw.githubusercontent.com/DustinWin/ruleset_geodata/clash-ruleset/games-cn.yaml
 ;ruleset=🎯 全球直连,[]GEOSITE,games-cn
 ;采用ruleset来使用DustinWin的games-cn规则，作Game组PASS后的兜底。避免GEO版本问题，不启用GEOSITE GAMES-CN。
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMedia/ChinaMedia.list
